fixed getlist problem
