# api/models/users.go
@@ -1,57 +1,57 @@
 package models
 
-type location struct {
+type Tolocation struct {
 	Latitude  float64 `json:"lat"`
 	Longitude float64 `json:"long"`
 }
 
 type User struct {
-	Id        int64    `json:"id"`
-	FullName  string   `json:"full_name"`
-	NickName  string   `json:"nick_name,omitempty"`
-	Photo     string   `json:"photo"`
-	Birthday  string   `json:"birthday"`
-	Location  location `json:"location"`
-	CreatedAt string   `json:"created_at"`
-	DeletedAt string   `json:"deleted_at"`
-	UpdatedAt string   `json:"updated_at"`
-	CreatedBy string   `json:"created_by"`
-	UpdatedBy string   `json:"updated_by"`
-	DeletedBy string   `json:"deleted_by"`
+	Id        int64      `json:"id"`
+	FullName  string     `json:"full_name"`
+	NickName  string     `json:"nick_name,omitempty"`
+	Photo     string     `json:"photo"`
+	Birthday  string     `json:"birthday"`
+	Location  Tolocation `json:"location"`
+	CreatedAt string     `json:"created_at"`
+	DeletedAt string     `json:"deleted_at"`
+	UpdatedAt string     `json:"updated_at"`
+	CreatedBy string     `json:"created_by"`
+	UpdatedBy string     `json:"updated_by"`
+	DeletedBy string     `json:"deleted_by"`
 }
 
 type UpdateUser struct {
-	Id        int64    `json:"id"`
-	FullName  string   `json:"full_name"`
-	NickName  string   `json:"nick_name,omitempty"`
-	Photo     string   `json:"photo"`
-	Birthday  string   `json:"birthday"`
-	Location  location `json:"location"`
-	UpdatedBy string   `json:"updated_by"`
+	Id        int64      `json:"id"`
+	FullName  string     `json:"full_name"`
+	NickName  string     `json:"nick_name,omitempty"`
+	Photo     string     `json:"photo"`
+	Birthday  string     `json:"birthday"`
+	Location  Tolocation `json:"location"`
+	UpdatedBy string     `json:"updated_by"`
 }
 
 type GetUser struct {
-	FullName  string   `json:"full_name"`
-	NickName  string   `json:"nick_name,omitempty"`
-	Photo     string   `json:"photo,omitempty"`
-	Birthday  string   `json:"birthday"`
-	Location  location `json:"location"`
-	CreatedAt string   `json:"created_at"`
-	DeletedAt string   `json:"deleted_at"`
-	UpdatedAt string   `json:"updated_at"`
-	CreatedBy string   `json:"created_by"`
-	UpdatedBy string   `json:"updated_by"`
-	DeletedBy string   `json:"deleted_by"`
+	FullName  string     `json:"full_name"`
+	NickName  string     `json:"nick_name,omitempty"`
+	Photo     string     `json:"photo,omitempty"`
+	Birthday  string     `json:"birthday"`
+	Location  Tolocation `json:"location"`
+	CreatedAt string     `json:"created_at"`
+	DeletedAt string     `json:"deleted_at"`
+	UpdatedAt string     `json:"updated_at"`
+	CreatedBy string     `json:"created_by"`
+	UpdatedBy string     `json:"updated_by"`
+	DeletedBy string     `json:"deleted_by"`
 }
 
 type UserList struct {
-	FullName  string   `json:"full_name"`
-	NickName  string   `json:"nick_name,omitempty"`
-	Photo     string   `json:"photo"`
-	Birthday  string   `json:"birthday"`
-	Location  location `json:"location"`
-	CreatedAt string   `json:"created_at,omitempty"`
-	UpdatedAt string   `json:"updated_at,omitempty"`
+	FullName  string     `json:"full_name"`
+	NickName  string     `json:"nick_name,omitempty"`
+	Photo     string     `json:"photo"`
+	Birthday  string     `json:"birthday"`
+	Location  Tolocation `json:"location"`
+	CreatedAt string     `json:"created_at,omitempty"`
+	UpdatedAt string     `json:"updated_at,omitempty"`
 }
 
 type DeleteUser struct {
@@ -60,12 +60,12 @@ type DeleteUser struct {
 }
 
 type AddUser struct {
-	FullName  string   `json:"full_name"`
-	NickName  string   `json:"nick_name,omitempty"`
-	Photo     string   `json:"photo"`
-	Birthday  string   `json:"birthday"`
-	Location  location `json:"location"`
-	CreatedBy string   `json:"created_by"`
+	FullName  string     `json:"full_name"`
+	NickName  string     `json:"nick_name,omitempty"`
+	Photo     string     `json:"photo"`
+	Birthday  string     `json:"birthday"`
+	Location  Tolocation `json:"location"`
+	CreatedBy string     `json:"created_by"`
 }
 
 type AddUsers struct {
