# api/router.go
@@ -12,13 +12,24 @@ import (
 	ginSwagger "github.com/swaggo/gin-swagger"
 )
 
-// New ...
 // @title           Swagger Example API
 // @version         1.0
 // @description     This is a sample server celler server.
+// @termsOfService  http://swagger.io/terms/
+
+// @contact.name   API Support
+// @contact.url    http://www.swagger.io/support
+// @contact.email  support@swagger.io
+
+// @license.name  Apache 2.0
+// @license.url   http://www.apache.org/licenses/LICENSE-2.0.html
+
+// @host      localhost:8080
 // @securityDefinitions.apikey ApiKeyAuth
 // @in header
 // @name Authorization
+// @externalDocs.description  OpenAPI
+// @externalDocs.url          https://swagger.io/resources/open-api/
 func New(store storage.IStorage, service service.IServiceManager, log logger.ILogger) *gin.Engine {
 	h := handler.NewStrg(store, service, log)
 
